# mech-interp-code-generation

./: .gitignore  1-different-models.ipynb  1-find_1_layer_interesting.ipynb  1-find_2_layer_interesting_copy.ipynb  1-find_interesting_neurons.ipynb  2-ast-experiments.ipynb  Exploratory_Analysis_Demo.ipynb  README.md  SoLU_Circuits.ipynb  bigrams.ipynb  famous-people.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
codegen/: infer.py  run_models.py
src/: solu_utils.py
