[tool.poetry]
name = "mech-interp-code-generation"
version = "0.1.0"
description = ""
authors = ["Alan <41682961+alan-cooney@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mech_interp_code_generation"}]

[tool.poetry.dependencies]
python = "^3.9"
easy-transformer = {git = "https://github.com/neelnanda-io/Easy-Transformer"}
matplotlib = "^3.6.2"
ipywidgets = "7.7.2"
numpy = "^1.23.5"
pandas = "^1.5.2"
plotly = "^5.11.0"
transformers = "^4.25.1"
tqdm = "^4.64.1"
torchtyping = "^0.1.4"
pytest = "^7.2.0"
circuitsvis = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
