[tool.poetry]
name = "codegen"
version = "0.1.0"
description = ""
authors = ["Alan <41682961+alan-cooney@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "codegen"}]

[tool.poetry.dependencies]
python = "^3.9"
easy-transformer = {git = "https://github.com/neelnanda-io/Easy-Transformer", rev="cb1ea2bf5d146276b6f6b824b3d37e3be4b47527"}
matplotlib = "^3.6.2"
numpy = "^1.23.5"
pandas = "^1.5.2"
plotly = "^5.11.0"
transformers = "^4.25.1"
tqdm = "^4.64.1"
torchtyping = "^0.1.4"
pytest = "^7.2.0"
circuitsvis = ">=1.29.0"
jupyterlab = "^3.5.0"
ipywidgets = "^8.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
